agent use case polish: update 1
